# muro

./: .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md  install.sh  run.sh
.claude/: settings.local.json
src/: audio.rs  groq.rs  history.rs  hotkey.rs  main.rs  paste.rs  transcriber.rs
